--- a/kui-web/ui/src/main/kotlin/index.html
+++ b/kui-web/ui/src/main/kotlin/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>White Ice</title>
+    <title>KUI</title>
 
     <!-- Bootstrap core CSS -->
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
